--- a/app/admin/templates/admin/monthly_report.html
+++ b/app/admin/templates/admin/monthly_report.html
@@ -14,54 +14,79 @@
   <a href="#">Delete</a>
 </div>
 
-
-<div class="container-new-trx">
-  <div class="form-container-new-trx"> 
+<!--
+<div class="search-section container">
 
     <h2>Monthly Report</h2>
 
     <form method="POST" action="{{ url_for('admin.monthly_report') }}">
         {{ form.hidden_tag() }}
         
-        <div class="form-group">
             {{ form.owner.label }}<br>
             {{ form.owner(class="form-control") }}
-        </div>
         
-        <div class="form-group">
             {{ form.start_date.label }}<br>
             {{ form.start_date(class="form-control", placeholder="YYYY-MM-DD") }}
-        </div>
         
-        <div class="form-group">
             {{ form.end_date.label }}<br>
             {{ form.end_date(class="form-control", placeholder="YYYY-MM-DD") }}
-        </div>
         
-        <div class="form-group">
             {{ form.submit(class="btn btn-primary") }}
-        </div>
     </form>
 
-
-
-    </div>
 </div>
+-->
 
-{% if tables_html and plots_html %}
-    <h3>Results</h3>
-    {% for table in tables_html %}
-        {{ table|safe }}
-    {% endfor %}
 
-    {% for plot in plots_html %}
-        {{ plot|safe }}
-    {% endfor %}
-{% endif %}
+    <!-- Sección de Búsqueda -->
+    <div class="search-section container">
+        <form method="POST" action="{{ url_for('admin.monthly_report') }}">
+            {{ form.hidden_tag() }}
+            
+                {{ form.owner.label }}<br>
+                {{ form.owner(class="form-control") }}
+            
+                {{ form.start_date.label }}<br>
+                {{ form.start_date(class="form-control", placeholder="YYYY-MM-DD") }}
+            
+                {{ form.end_date.label }}<br>
+                {{ form.end_date(class="form-control", placeholder="YYYY-MM-DD") }}
+            
+                {{ form.submit(class="btn btn-primary") }}
+        </form>
+    </div>
 
-<!-- Incluir los scripts de Vega y Vega-Embed -->
-<script src="https://cdn.jsdelivr.net/npm/vega@5.21.0"></script>
-<script src="https://cdn.jsdelivr.net/npm/vega-lite@5.2.0"></script>
-<script src="https://cdn.jsdelivr.net/npm/vega-embed@6.20.2"></script>
+    <!-- Sección de KPIs -->
+    <div class="kpi-section container">
+        <div class="kpi-card">KPI 1: <span>0.614</span></div>
+        <div class="kpi-card">KPI 2: <span>0.614</span></div>
+        <div class="kpi-card">KPI 3: <span>0.614</span></div>
+        <div class="kpi-card">KPI 4: <span>0.614</span></div>
+        <!-- Añadir más KPIs según sea necesario -->
+    </div>
+
+
+    <!-- Tabla de Datos -->
+    <div class="table-section container">
+        {% if tables_html %}
+            <h3>Results</h3>
+            {% for table in tables_html %}
+                {{ table|safe }}
+            {% endfor %}
+        {% endif %}
+    </div>
+
+
+    <!-- Gráficos -->
+    <div class="chart-section container">
+        {% if plots_html %}
+            <h3>Results</h3>
+            {% for plot in plots_html %}
+                {{ plot|safe }}
+            {% endfor %}
+        {% endif %}
+    </div>
+
+
 
 {% endblock %}
