--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -197,7 +197,7 @@ table {
 th, td {
   border: 1px solid #c2ccd8;
   padding: 12px;
-  text-align: left;
+  text-align: center;
 }
 
 th {
@@ -455,4 +455,102 @@ form h2 {
   text-align: center;
   color: #333;
   margin-bottom: 20px;
+}
+
+
+/* ================== Monthly report  ====================== */
+
+.search-section {
+  background-color: #e1e8ed;
+  padding: 15px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.search-section form {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+.search-section form .form-control {
+  width: 30%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-right: 10px; /* Espacio entre los campos */
+}
+
+.search-section form label {
+  display: none; /* Oculta las etiquetas para simplificar */
+}
+
+.search-section form .btn {
+  background-color: #28a745;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.search-section form .btn:hover {
+  background-color: #218838;
+}
+
+.kpi-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.kpi-card {
+  background-color: #fff;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin: 10px;
+  width: 150px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.table-section {
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  overflow-x: auto;
+}
+
+/*
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table th, table td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  text-align: center;
+}
+*/
+.chart-section {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.chart {
+  width: 100%;
+  height: 300px;
+  margin: 20px 0;
 }
