--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
   
-  <title>MyFinancesX</title>
+  <title>MyInvestmentX</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
@@ -23,8 +23,8 @@
 <body>
 
     <div class="logo">
-        <img src="{{ url_for('static', filename='images/logo_dolar.png') }}" alt="MyFinancesX Logo">
-        <a href="{{ url_for('public.index') }}">MyFinancesX</a>
+        <img src="{{ url_for('static', filename='images/logo_dolar.png') }}" alt="MyInvestmentX Logo">
+        <a href="{{ url_for('public.index') }}">MyInvestmentX</a>
       </div>
     
       <header>
