--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -504,6 +504,7 @@ form h2 {
   background-color: #218838;
 }
 
+/*
 .kpi-section {
   display: flex;
   flex-wrap: wrap;
@@ -511,15 +512,61 @@ form h2 {
   margin-bottom: 20px;
 }
 
+.kpi-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
+
 .kpi-card {
-  background-color: #fff;
+  background-color: #f7f7f7;
+  border-radius: 8px;
   padding: 15px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  margin: 10px;
-  width: 150px;
   text-align: center;
-  font-size: 18px;
+  font-weight: bold;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  font-size: 1.1em;
+}
+*/
+.kpi-section {
+  display: grid;
+  gap: 20px; /* Space between the KPI cards */
+  justify-content: center;
+}
+
+.kpi-card {
+  padding: 20px;
+  background-color: #f8f9fa;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* 2 columns */
+.kpi-section.cols-2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+/* 4 columns */
+.kpi-section.cols-4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/* 6 columns */
+.kpi-section.cols-6 {
+  grid-template-columns: repeat(6, 1fr);
+}
+
+
+.kpi-card span {
+  display: block;
+  margin-top: 10px;
+  font-size: 1.3em;
+  color: #007bff;
 }
 
 .table-section {
