--- a/app/public/templates/public/index.html
+++ b/app/public/templates/public/index.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Home - MyFinancesX{% endblock %}
+{% block title %}Home - MyInvestmentX{% endblock %}
 
 {% block content %}
 
 
 <section class="hero">
-    <h1>Welcome to MyFinancesX</h1>
-    <p>Track your home incomes and expenses</p>
+    <h1>Welcome to MyInvestmentX</h1>
+    <p>Grow up your investments</p>
 </section>
 <section class="abstract-art">
     <img src="{{ url_for('static', filename='images/finantial_charts.jpg') }}" alt="Financial abstract art" width="500" height="150">
