graphics in monthly_report

--- a/app/admin/templates/admin/monthly_report.html
+++ b/app/admin/templates/admin/monthly_report.html
@@ -170,12 +170,18 @@
 
     <!-- Gráficos -->
     <div class="chart-section container">
-        {% if plots_html %}
+        {% if altair_chart %}
             <h3>Results</h3>
-            {% for plot in plots_html %}
-                {{ plot|safe }}
-            {% endfor %}
+            {{ altair_chart|safe }}
         {% endif %}
+        {% if matplotlib_chart %}
+            <h3>Results</h3>
+            {{ matplotlib_chart|safe }}
+        {% endif %}
+        {% if plotly_chart %}
+        <h3>Results</h3>
+        {{ plotly_chart|safe }}
+        {% endif %}        
     </div>
 
 
